--- a/ClientControl/ClientControl.csproj
+++ b/ClientControl/ClientControl.csproj
@@ -61,6 +61,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="model\IPPort.cs" />
+    <Compile Include="model\User.cs" />
     <Compile Include="UDPProtocol.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
