--- a/ClientControl/ClientControl.csproj
+++ b/ClientControl/ClientControl.csproj
@@ -70,6 +70,9 @@
       <DependentUpon>TitleBar.xaml</DependentUpon>
     </Compile>
     <Compile Include="UDPProtocol.cs" />
+    <Compile Include="ViewScreenWindow.xaml.cs">
+      <DependentUpon>ViewScreenWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="ChatWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -87,6 +90,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="TitleBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ViewScreenWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
