--- a/ClientControl/ClientControl.csproj
+++ b/ClientControl/ClientControl.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ChatWindow.xaml.cs">
       <DependentUpon>ChatWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ChatWindowManager.cs" />
     <Compile Include="model\IPPort.cs" />
     <Compile Include="model\User.cs" />
     <Compile Include="TitleBar.xaml.cs">
